cursive-bootstrap/tests/ui/E-TYP/E-TYP-2503.cursive
// RUN: compile-fail
// DIAG: E-TYP-2503
// SPEC: 8.15
// DESC: Type does not implement required procedure from class

class Required {
    procedure must_have(~) -> i32
}

record Missing <: Required {  //~ ERROR E-TYP-2503: missing required procedure
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
